made emails not case sensitive and updated js values to use jquery

--- a/skateable/client/login.html
+++ b/skateable/client/login.html
@@ -13,10 +13,10 @@
 
   <div class="container">
     <label for="uname"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="uname" required>
+    <input type="text" placeholder="Enter Email" id="uname" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" id="psw" required>
 <div class="container2">
     <button type="button" id= "loginbtn" onclick="Login();">Login</button>
     <button type="button" id="signupbtn" onclick="location.href='signup.html'">Sign Up</button>
