renamed chat to board

--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div id="messageContainer">
-                    <h1 id ="chatHeader">Chat</h1>
+                    <h1 id ="chatHeader">Board</h1>
                     <div id="chatBox"></div>
                     <form class="cursor">
                         <input type="text" id="message" placeholder="Your message here...">
