Changed all pages to say logout on side bar, added enter button functionality to signup and login pages, changed profile page Bio to notes

--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -17,7 +17,7 @@
                 <a href="profile.html" class="list">Edit Profile</a>
                 <a href="groups.html" class="list">Groups</a>
                 <a href="parks.html" class="list">My Parks</a>
-                <a href="login.html" class="login">Login/Logout</a>
+                <a href="login.html" class="login">Logout</a>
             </div>
             
             <header id="top-bar">
