fixed download bug

--- a/skateable/client/login.html
+++ b/skateable/client/login.html
@@ -20,7 +20,7 @@
 <div class="container2">
     <button type="button" id= "loginbtn" onclick="Login();">Login</button>
     <button type="button" id="signupbtn" onclick="location.href='signup.html'">Sign Up</button>
- 	<a href="/SkateableUserManualV1.pdf" download="SkateableUserManualV1.pdf">
+ 	<a href="/client/img/Skateable%20User%20Manual%20V1.pdf" download="SkateableUserManualV1.pdf">
     <button>Download Manual</button>
 </a>
     </div>
