Password update now asterisks - connect to group board button more clear

--- a/skateable/client/profile.html
+++ b/skateable/client/profile.html
@@ -69,19 +69,19 @@
               Enter Old Password<span class="req">*</span>
               </label>
               <br>
-            <input type="text" id="oldPass" required autocomplete="off"/>
+            <input type="password" id="oldPass" required autocomplete="off"/>
               <br>  
                <label>
               Enter New Password<span class="req">*</span>
             </label>
               <br>
-            <input type="text" id="newPass" required autocomplete="off"/>
+            <input type="password" id="newPass" required autocomplete="off"/>
               <br>
                <label>
               Re-Enter New Password<span class="req">*</span>
             </label>
               <br>
-            <input type="text" id="newPass2" required autocomplete="off"/>
+            <input type="password" id="newPass2" required autocomplete="off"/>
               <br>  <br>
             </div>
    <div class="modal-footer">
