added browser req description to the home page

--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="modal-body">
                             <h4>Pin Name*: </h4>
-                            <input type="text" id="pinName"><br>
+                            <input type="text" id="pinName" autofocus><br>
                             <h4>Search the address of the park* <img src="img/myLocationIcon.png" id="current-location" data-bind="click: getLocation"></h4>
                             <input id="places-search" type="text" placeholder="Ex: 3307 3rd Ave W . . .">
                             <h5>Add Comment </h5>
