--- a/skateable/client/signup.html
+++ b/skateable/client/signup.html
@@ -20,7 +20,7 @@
                 First Name<span class="req">*</span>
               </label>
                 <br>
-              <input type="text" id="firstN" required autocomplete="off" />
+              <input type="text" id="firstN" required autocomplete="off" autofocus/>
                 <br>
               
               <label>
