--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -86,7 +86,7 @@
                             <h6><strong>Members: </strong><span data-bind= "text: members"></span></h6> 
 							<div class="list-footer">
                             <button  type="button" class="leave" id="leave" data-bind = "click:  $parent.leaveGroup">Leave Group</button>
-                            <button  type="button" id="connect" data-bind = "click: $parent.ConnectChat">Connect to Board</button>
+                            <button  type="button" id="connect" data-bind = "click: $parent.ConnectChat" autofocus>Connect to Board</button>
                             <!-- <button  type="button" class="leave" data-bind = "click:  $parent.leaveGroup">Leave Group</button>
                             <button  type="button" class="connect" data-bind = "click: $parent.connectChat">Connect to Chat</button> -->
 							</div>
