works with firefox

--- a/skateable/client/parks.html
+++ b/skateable/client/parks.html
@@ -21,8 +21,8 @@
             </div>
             
             <header id="top-bar">
-                <button id="menu-button">
-                    <img id="menu" src="img/menu.png" alt="menu" data-bind="click: openPanel">
+                <button id="menu-button" data-bind="click: openPanel">
+                    <img id="menu" src="img/menu.png" alt="menu">
                 </button>
                 <div id="logo"><a href="index.html"><img src="img/icon.png" alt="Skateable"></a></div>
             </header>
