added changes to the requirements

--- a/skateable/client/login.html
+++ b/skateable/client/login.html
@@ -34,6 +34,6 @@
         
     </body>
 	<footer>
-	*Browser Requirements: IE 11+, Firefox 59+, Google Chrome 49+, Safari 11+
+	*Browser Requirements: <img src= "img/Capture.PNG" class = "requirements">
 	</footer>
 </html>
